<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircularActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/circle_4"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:alpha="0.3"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle_1" />

        <ImageView
            android:id="@+id/circle_3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:alpha="0.3"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/circle_4"
            app:layout_constraintEnd_toEndOf="@+id/circle_4"
            app:layout_constraintStart_toStartOf="@+id/circle_4"
            app:layout_constraintTop_toTopOf="@+id/circle_4"
            app:srcCompat="@drawable/circle_1" />


        <ImageView
            android:id="@+id/circle_2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.3"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/circle_3"
            app:layout_constraintEnd_toEndOf="@+id/circle_3"
            app:layout_constraintStart_toStartOf="@+id/circle_3"
            app:layout_constraintTop_toTopOf="@+id/circle_3"
            app:srcCompat="@drawable/circle_1" />

        <ImageView
            android:id="@+id/circle_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.3"
            app:layout_constraintBottom_toBottomOf="@+id/circle_2"
            app:layout_constraintEnd_toEndOf="@+id/circle_2"
            app:layout_constraintStart_toStartOf="@+id/circle_2"
            app:layout_constraintTop_toTopOf="@+id/circle_2"
            app:srcCompat="@drawable/circle_1" />

        <ImageView
            android:id="@+id/center_dot"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/circle_1"
            app:layout_constraintEnd_toEndOf="@+id/circle_1"
            app:layout_constraintStart_toStartOf="@+id/circle_1"
            app:layout_constraintTop_toTopOf="@+id/circle_1"
            app:srcCompat="@drawable/center_point" />


        <TextView
            android:id="@+id/ParentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintCircle="@+id/circle_4"
            app:layout_constraintCircleRadius="155dp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="17dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/editEndpointBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEditEndpoint"
        android:text="Update Endpoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEndpoint"
        android:layout_width="227dp"
        android:layout_height="47dp"
        android:autofillHints="Enter label..."
        android:ems="10"
        android:hint="Enter Endpoint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editEndpointBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/upArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

    <Button
        android:id="@+id/zoom_in_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="onClickZoomIn"
        android:text="IN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/zoom_out_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/zoom_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClickZoomOut"
        android:text="Out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zoom_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClickBack"
        android:text="Add Friends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zoom_in_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/lostTime"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="323dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/GPSSignal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <ImageView
        android:id="@+id/GPSSignal"
        android:layout_width="21dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        app:srcCompat="@drawable/gpsdot" />


</androidx.constraintlayout.widget.ConstraintLayout>



